# atrium

./: .dockerignore  .env.example  .gitignore  AUDIT_COMPREHENSIVE_2026-06-28.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  TRADEMARK.md  atrium.toml  audit.toml  docker-compose.yml  start.bat  start.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  docker.yml  release.yml
builtin_canned/: ack_guide.ack  atrium_architecture.ack  experiment_log_policy.ack  qq_chat_guide.ack
crates/atrium-bridge/: Cargo.toml  build.rs
crates/atrium-bridge/src/: error.rs  grpc.rs  lib.rs  protocol.rs  shm.rs  types.rs
crates/atrium-emotion/: Cargo.toml
crates/atrium-emotion/benches/: emotion_bench.rs
crates/atrium-emotion/src/: anticipation_preloader.rs  circadian.rs  compound.rs  disappointment_handler.rs  inertia.rs  lib.rs  longing.rs  longing_expression_channel.rs  longing_narrative_bridge.rs  reunion.rs
crates/atrium-memory/: Cargo.toml
crates/atrium-memory/benches/: memory_bench.rs  powered_modules_bench.rs
crates/atrium-memory/src/: active_forget.rs  adaptive_ritual.rs  anniversary_system.rs  anticipation_depth.rs  anticipation_store.rs  associative.rs  atrium_vault.rs  authentic_expression_modulator.rs  authentic_imperfection.rs  canned.rs  conflict_growth.rs  conflict_pattern_learner.rs  conflict_reconciliation.rs  conflict_store.rs  consolidation.rs  curiosity_drive.rs  curiosity_resonance.rs  diary_store.rs  embedding_fallback.rs  emotion_store.rs  emotional_arc.rs  emotional_climate.rs  emotional_consolidation.rs  emotional_coupling.rs  emotional_demand_boundary.rs  emotional_irrationality.rs  empathy.rs  episodic_store.rs  evidence.rs  existential_depth.rs  fact_extractor.rs  fact_store.rs  feedback.rs  file_store.rs  followup_style_learner.rs  followup_tracker.rs  fts5_index.rs  graph_store.rs  growth_feedback.rs  history.rs  (+72 more)
crates/atrium-memory/src/conflict_engine/: growth.rs  mod.rs  pattern.rs  tests.rs
crates/atrium-memory/src/emotional_irrationality/: chaos_engine.rs  contagion_engine.rs  mod.rs  pulse_engine.rs  residue_engine.rs  shock_absorber.rs  tests.rs  types.rs
crates/atrium-memory/src/life_narrative/: arc_detector.rs  core_types.rs  mod.rs  narrative_config.rs  narrative_snapshot.rs  periodic.rs  retrospective.rs  turning_point.rs  voice_modulator.rs  writers.rs
crates/atrium-persona/: Cargo.toml
crates/atrium-persona/src/: error.rs  lib.rs  loader.rs  manager.rs  types.rs
crates/atrium-plugin/: Cargo.toml
crates/atrium-plugin/src/: dynamic.rs  error.rs  lib.rs  manifest.rs  vtable.rs
crates/atrium-tui/: Cargo.toml
crates/atrium-tui/src/: app.rs  client.rs  lib.rs  main.rs
crates/atrium-voice/: Cargo.toml
crates/atrium-voice/src/: audio_buffer.rs  config.rs  lib.rs  prosody_bridge.rs  voiceprint.rs
crates/atrium-voice/src/stt/: engine.rs  mod.rs  whisper.rs
crates/atrium-voice/src/tts/: engine.rs  gpt_sovits.rs  mod.rs  piper.rs
crates/core/: Cargo.toml
crates/core/benches/: core_bench.rs
crates/core/src/: P1-4_MERGE_DESIGN.md  audit.rs  config.rs  expression_orchestrator.rs  guard.rs  lib.rs  llm_client.rs  llm_client_diff_report.md  main.rs  metrics.rs  proactive.rs  room.rs  scheduler.rs
crates/core/src/http_gateway/: handlers.rs  mod.rs  models.rs  server.rs  ws.rs
crates/core/src/service/: api_handler.rs  cognition.rs  emotion.rs  expression.rs  lifecycle.rs  mod.rs  monologue.rs  narrative.rs  perception.rs  react_tools.rs  simple_greeting.rs  subsystems.rs  user_profile.rs
crates/core/src/service/narrative/: mod.rs  narrative_emotional.rs  narrative_extras.rs  narrative_imperfection.rs  narrative_irrationality.rs  narrative_presence.rs  narrative_ritual.rs  narrative_solitude.rs  narrative_story.rs  narrative_vulnerability.rs
crates/core/tests/: cross_channel_e2e.rs  e2e.rs  expression_diag.rs.deleted  expression_e2e_snippet.txt.deleted  phase28_e2e.rs  phase2_e2e.rs  room_e2e.rs  stream_e2e.rs
docs/: atrium-think.md
docs/Chinese/: digital-life-capabilities.md  voice-deployment-guide.md
docs/English/: digital-life-capabilities.md  voice-deployment-guide.md
examples/echo-plugin/: Cargo.toml  manifest.toml
examples/echo-plugin/src/: lib.rs
frontend/: index.html
monitoring/: alerts.yml  prometheus.yml
monitoring/grafana/dashboards/: atrium-overview.json  dashboard-provider.yml
monitoring/grafana/datasources/: prometheus.yml
proto/: atrium.proto
readme/: README_ZH.md
scripts/: digital_life_test.py  e2e_docker_test.py  e2e_smoke_test.py
services/gateway/: .dockerignore  Dockerfile.gateway  Dockerfile.qq  alembic.ini  gen_proto.py  pyproject.toml
services/gateway/atrium/: __init__.py  app.py  atrium_run.py  care_engine.py  client.py  db.py  models.py  qq_adapter.py
services/gateway/atrium/proto/: __init__.py
services/gateway/migrations/: env.py
services/gateway/migrations/versions/: 001_initial.py
services/gateway/tests/: test_app.py
services/llm-orchestrator/: pyproject.toml
services/llm-orchestrator/atrium_llm/: __init__.py  cli.py  client.py  models.py  orchestrator.py  react.py  router.py
services/llm-orchestrator/tests/: test_orchestrator.py
services/terminal/: pyproject.toml
services/terminal/atrium_terminal/: __init__.py  chat.py  client.py  config.py  main.py  onboarding.py
services/terminal/tests/: test_terminal.py
