[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/atrium-memory",
    "crates/atrium-emotion",
    "crates/atrium-persona",
    "crates/atrium-bridge",
    "crates/atrium-plugin",
    "examples/echo-plugin",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
anyhow = "1"
mimalloc = "0.1"
flume = "0.11"
chrono = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
rand = "0.8"
libloading = "0.8"
criterion = "0.5"
