[package]
name = "atrium-bridge"
version = "0.12.0"
edition = "2021"
description = "Atrium 桥接层 — gRPC 服务器 + 共享内存实时通道"

[features]
default = []
shm = ["shared_memory"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tonic = "0.12"
prost = "0.13"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
bytes = "1"
bincode = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
flume = "0.11"
tokio-stream = "0.1"
futures-util = "0.3"

# 内部 crate 依赖 / Internal crate dependencies
atrium-memory = { path = "../atrium-memory" }

# 共享内存（可选）
shared_memory = { version = "0.12", optional = true }

[lib]
name = "atrium_bridge"
path = "src/lib.rs"

[build-dependencies]
tonic-build = "0.12"