[package]
name = "atrium-emotion"
version = "0.11.0"
edition = "2021"

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
bincode = "1"
chrono.workspace = true
rand.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "emotion_bench"
harness = false
