[package]
name = "atrium-plugin"
version = "0.10.0"
edition = "2021"
description = "Atrium 插件系统 — 动态/静态插件加载与生命周期管理"

[dependencies]
tracing = "0.1"
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
libloading = "0.8"

[lib]
name = "atrium_plugin"
path = "src/lib.rs"
