[package]
name = "atrium-core"
version = "0.2.0"
edition = "2021"

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
mimalloc.workspace = true
flume.workspace = true
atrium-bridge = { path = "../atrium-bridge" }
atrium-memory = { path = "../atrium-memory" }
atrium-emotion = { path = "../atrium-emotion" }
atrium-persona = { path = "../atrium-persona" }
atrium-plugin = { path = "../atrium-plugin" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
parking_lot = "0.12"
async-trait = "0.1"
aho-corasick = "1.1"
chrono.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio-stream = "0.1"
futures-util = "0.3"
tonic = "0.12"

rand = "0.8"
sled = "0.34"
[dev-dependencies]
rand = "0.8"
sled = "0.34"