[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "atrium-gateway"
version = "1.0.0"
description = "Atrium Python Gateway - FastAPI frontend for Atrium Rust backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "grpcio>=1.81.1",
    "grpcio-tools>=1.81.1",
    "protobuf>=4.25.0",
    "pydantic>=2.5.0",
    "httpx>=0.26.0",
    "toml>=0.10.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
include = ["atrium*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]