[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "atrium-llm-orchestrator"
version = "1.0.0"
description = "Atrium LLM Orchestrator - bridges LLM APIs with Atrium memory/emotion/persona"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
include = ["atrium_llm*"]